@startuml
'https://plantuml.com/class-diagram
'ortho/polyline
'skinparam linetype polyline
skinparam nodesep 50 /' horizontal separator '/
skinparam ranksep 100 /' vertical separator '/
skinparam titleBorderRoundCorner 15
skinparam titleBorderThickness 1
skinparam titleBorderColor black
skinparam titleBackgroundColor AliceBlue
skinparam groupInheritance 1
skinparam legendBackgroundColor AliceBlue

'skinparam style strictuml

'scale 800 width
scale 0.5
hide empty members
'hide circle'
skinparam titleFontSize 18

top to bottom direction
'left to right direction

title PSC Filing API: Target Data Model Class Structure

legend right
|=Revision |=Date |
|    0.3    |     23/03/2023    |
endlegend

    package "model" {

        package "dto" {

            class AddressDto {
                -addressLine1
                -addressLine2
                -careOf
                -country
                -locality
                -poBox
                -postalCode
                -premises
                -region
            }

            class Date3TupleDto {
                -day:int {nullable}
                -month:int
                -year:int
            }

            class IdentificationDto {
                -countryRegistered
                -placeRegistered
                -registrationNumber
                -legalAuthority
                -legalForm
            }

            class NameElementsDto {
                -forename
                -otherForenames
                -surname
                -title
            }
            
            class PscStatementDto {
                -referenceEtag
                -referenceStatementId
                -restrictionsNoticeWithdrawlReason
                -statementActionDate: LocalDate
                -statementType
            }

            note "Required for PSC09" as Note2

          Note2 - PscStatementDto::referenceStatementId

            interface PscDtoCommunal {
                +getAddress():  AddressDto
                +getAddressSameAsRegisteredOfficeAddress(): Boolean
                +getCeasedOn(): LocalDate
                +getNaturesOfControl(): String[]
                +getNotifiedOn(): LocalDate
                +getReferenceEtag()
                +getReferencePscId()
                +getRegisterEntryDate(): LocalDate
            }

            class PscCommonDto implements PscDtoCommunal {
                -address: AddressDto
                -addressSameAsRegisteredOfficeAddress: Boolean
                -ceasedOn: LocalDate
                -naturesOfControl[1..*]
                -notifiedOn: LocalDate
                -referenceEtag
                -referencePscId
                -registerEntryDate: LocalDate
            }

            class PscIndividualDto implements PscDtoCommunal {
                -pscDtoCommunal: PscDtoCommunal
                -countryOfResidence
                -dateOfBirth: Date3TupleDto
                -nationality
                -residentialAddress: AddressDto
                -residentialAddressSameAsCorrespondenceAddress: Boolean
                -nameElements: NameElementsDto
            }

            class PscWithIdentificationDto implements PscDtoCommunal {
                -pscDtoCommunal: PscDtoCommunal
                -name
                -identification:IdentificationDto
            }
            
           note "This models the corporate entity (RLE) and \nlegal person (ORP) types of PSC" as Note1
                Note1 -r- PscWithIdentificationDto

            PscCommonDto *-- PscIndividualDto::pscCommon
            PscCommonDto *-- PscWithIdentificationDto::pscCommon
            Date3TupleDto o-d- PscIndividualDto::dateOfBirth
            NameElementsDto o-- PscIndividualDto::nameElements
            PscWithIdentificationDto::identification -o IdentificationDto
            AddressDto o-- PscCommonDto::address
            PscIndividualDto::residentialAddress -o AddressDto
        }
    }

@enduml